tests ampliados y perfil refactorizado