@@ -1,28 +1,29 @@
 package gal.usc.telariabackend.controllers;
 
-import gal.usc.telariabackend.model.dto.AiChatMessage;
+import gal.usc.telariabackend.model.dto.AiChatHistoryPage;
 import gal.usc.telariabackend.model.dto.AiChatMessageRequest;
 import gal.usc.telariabackend.services.AiChatService;
 import gal.usc.telariabackend.utils.SecurityHelper;
+import java.time.OffsetDateTime;
+import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
-
-import java.util.List;
-import java.util.UUID;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 
 @RestController
 public class AiChatController implements AiChatApi {
     private final AiChatService aiChatService;
     private final SecurityHelper securityHelper;
-    private final ExecutorService executor = Executors.newCachedThreadPool();
+    // Virtual threads: lightweight, bounded only by memory, no pool tuning needed.
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
 
     public AiChatController(AiChatService aiChatService, SecurityHelper securityHelper) {
         this.aiChatService = aiChatService;
@@ -30,8 +31,14 @@ public class AiChatController implements AiChatApi {
     }
 
     @Override
-    public ResponseEntity<List<AiChatMessage>> getAiChatHistory(UUID tripId) {
-        return new ResponseEntity<>(aiChatService.getHistory(tripId, securityHelper.getUserId()), HttpStatus.OK);
+    public ResponseEntity<AiChatHistoryPage> getAiChatHistory(
+        UUID tripId,
+        @RequestParam(value = "before", required = false) OffsetDateTime before
+    ) {
+        return new ResponseEntity<>(
+            aiChatService.getHistory(tripId, securityHelper.getUserId(), before),
+            HttpStatus.OK
+        );
     }
 
     /**
@@ -47,7 +54,7 @@ public class AiChatController implements AiChatApi {
     @PostMapping(value = "/trips/{tripId}/ai-chat", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
     public SseEmitter sendAiChatMessage(@PathVariable UUID tripId, @RequestBody AiChatMessageRequest request) {
         UUID userId = securityHelper.getUserId();
-        SseEmitter emitter = new SseEmitter();
+        SseEmitter emitter = new SseEmitter(300_000L); // 5-minute timeout for long AI responses
 
         executor.execute(() -> {
             try {
